--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "goit-js-hw-09",
+  "name": "goit-js-hw-11",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/goit-js-hw-09/",
+    "build": "vite build --base=/goit-js-hw-11/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "izitoast": "^1.4.0",
     "simplelightbox": "^2.14.3",
     "validator": "^13.12.0",
     "vite-plugin-full-reload": "^1.2.0",
